# camera-gstreamer

./: .gitreview  CMakeLists.txt  README.md
app/: CMakeLists.txt  camera-gstreamer.desktop  main.cpp  utils.cpp  utils.h
conf.d/cmake/: config.cmake
conf.d/wgt/: config.xml.in
